# Colorer-library-svn

./: .classpath  .project  INSTALL  LICENSE  README  TODO.txt  build.cmd  build.properties  build.user.properties.template  build.xml  catalog.xml  changelog  feature.xml  history.ru.txt  javadoc.xml  path.properties  plugin.properties  plugin.xml  profile-todo.txt  subprojects
CVSROOT/: cvswrappers  loginfo
colorer/: FarColorer.history.ru.txt  INSTALL  LICENSE  README  TODO.txt  build.properties  build.user.properties.template  build.xml  catalog.xml  changelog  common.xml
cxrcs/: TODO.txt  util.xml
distr/: LINUX  MACOS  README  TODO  catalog.xml  whatsnew
doc/: build.properties  build.properties.template  common.xml.example  consoletools.html  farplugin.html  index.html  lang-list.html  license.html  mc.html  xsd2hrc.html
dtd2xml/: TODO.txt  changelog  util.xml
eclipsecolorer/: build.properties  build.xml  feature.in.xml  plugin.xml  publish.sh  site.in.xml
far2colorer/: TODO.txt  changelog  history.ru.txt
far3colorer/: README  changelog  history.ru.txt
farcolorer/: changelog  history.ru.txt
hrc/: TODO.txt  build.xml  changelog  changes.txt  colorer.hrc  default.hrc  proto.hrc
mccolorer/edit/: ChangeLog  Makefile  Makefile.am  Makefile.in  bookmark.c  edit-widget.h  edit.c  edit.h  editcmd.c  editcmddef.h  editdraw.c  editkeys.c  editlock.c  editmenu.c  editoptions.c  editwidget.c  syntax-colorer-dialog.c  syntax-colorer-legacy-log.h  syntax-colorer-wrapper.c  syntax-colorer-wrapper.h  syntax-colorer.cpp  syntax-colorer.h  syntax.c  wordproc.c
(+2377 files in other folders)
